--- a/src/assets/scss/signin.scss
+++ b/src/assets/scss/signin.scss
@@ -28,124 +28,61 @@
             flex-direction: column;
             justify-content: center;
         }
-        .panel-left{
-            background: url('../images/login-left-bg.png') no-repeat top 90px right #0096DF;
-            background-size: contain;
-            border-radius: 31px;
-            padding: 56px;
-            flex: 1;
-            max-width: 45%;
-            width: 100%;
-            position: relative;
-            overflow: hidden;
-            @media ($sm-1679){
-                padding: 40px;
-            }
-            @media ($sm-1441){
-                padding: 35px;
-            }
-            @media ($sm-1199){
-                padding: 30px;
-            }
-            @media ($sm-991){
-                padding: 25px;
-                max-width: 45%;
-            }
-            @media ($sm-767){
-                padding: 20px;
-                max-width: 50%;
-            }
-            @media (max-width:650px){
-                max-width: 100%;
-                flex: none;
-                display: none;
-            }
-            // &:after{
-            //     content: "";
-            //     width: 100%;
-            //     height: 751px;
-            //     background: url('../img/login-left-bg.png') no-repeat bottom right;
-            //     background-size: contain;
-            //     background-position: bottom right;
-            //     position: absolute;
-            //     right: 0;
-            //     bottom: -55px;
-            //     top: unset;
-            //     @media (max-width:1750px){
-            //         height: 660px;
-            //         bottom: -77px;
-            //     }
-            //     @media ($sm-1679){
-            //         height: 500px;
-            //     }
-            //     @media (max-width:1566px){
-            //         height: 595px;
-            //         bottom:-48px;
-            //     }
-            //     @media ($sm-1481){
-            //         height: 508px;
-            //     }
-            //     @media (max-width:1199px){
-            //         bottom:0px;
-            //     }
-            //     @media (max-width:650px){
-            //         height: 176px;
-            //         bottom:0px;
-            //     }
-            // }
-            .logo-wrp{
-                display: flex;
-                position: relative;
-                z-index: 1;
-                @media (max-width:650px){
-                    margin: 0 auto;
-                    justify-content: center;
-                }
-                img{
-                    max-width: 100%;
-                    height: 87px;
-                    @media ($sm-1679){
-                        height: 77px;
-                    }
-                    @media (max-width:1566px){
-                        height: 67px;
-                    }
-                    @media ($sm-1481){
-                        height: 57px;
-                    }
-                }
-            }
-            .quotes-wrp{
-                font-size: 18px;
-                color: $white;
-                padding: 26px 0 0;
-                position: relative;
-                z-index: 1;
-                @media ($sm-1679){
-                    font-size: 16px;
-                    padding: 20px 0 0;
-                }
-                @media ($sm-1441){
-                    font-size: 15px;
-                    padding: 15px 0 0;
-                }
-                @media ($sm-1199){
-                    font-size: 14px;
-                    padding: 10px 0 0;
-                }
-                @media ($sm-767){
-                    font-size: 13px;
-                }
-                @media (max-width:650px){
-                    text-align: center;
-                }
-                br{
-                    @media (max-width:900px){
-                        display: none;
-                    }
-                }
-            }
-        }
+.panel-left {
+  background:
+    linear-gradient(rgba(0, 150, 223, 0.88), rgba(0, 150, 223, 0.88)),
+    url('../images/tech-bgg.png') no-repeat center center;
+  background-size: cover;
+
+  border-radius: 31px;
+  padding: 56px 56px 90px; // ✅ more bottom space
+  flex: 1;
+  max-width: 45%;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+
+  // ✅ Make layout balanced
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+
+  @media ($sm-1679) { padding: 40px 40px 70px; }
+  @media ($sm-1441) { padding: 35px 35px 60px; }
+  @media ($sm-1199) { padding: 30px 30px 50px; }
+  @media ($sm-991)  { padding: 25px 25px 45px; max-width: 45%; }
+  @media ($sm-767)  { padding: 20px 20px 40px; max-width: 50%; }
+  @media (max-width:650px) {
+    max-width: 100%;
+    flex: none;
+    display: none;
+  }
+
+  // ✅ Push text down a little (top spacing)
+  .quotes-wrp {
+    margin-top: 66px;         // ✅ moves content down
+    max-width: 520px;         // ✅ readable line length
+    font-size: 18px;
+    color: $white;
+    line-height: 1.8;
+    position: relative;
+    z-index: 2;
+
+    // ✅ Premium glass box (optional but looks great)
+    background: rgba(255, 255, 255, 0.12);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    backdrop-filter: blur(4px);
+    border-radius: 16px;
+    padding: 84px 24px;
+
+    @media ($sm-1679) { font-size: 16px; margin-top: 66px; }
+    @media ($sm-1441) { font-size: 15px; margin-top: 45px; }
+    @media ($sm-1199) { font-size: 14px; margin-top: 35px; }
+    @media ($sm-767)  { font-size: 13px; margin-top: 25px; }
+  }
+}
+
+
         .panel-right{
             display: flex;
             align-items: center;
